<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="#000"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:fontFamily="@font/comfortaa_bold"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="v1.0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:text="@string/connect"
                    android:textColor="#000"
                    android:textSize="17sp"
                    tools:ignore="MissingPrefix" />
                <LinearLayout
                    android:onClick="app_telegram"
                    android:id="@+id/app_telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="16dp"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        app:srcCompat="@drawable/telegram"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/telegram"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#000" />
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.85"
                            android:text="@string/telegramdes" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:onClick="app_insta"
                    android:id="@+id/app_insta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="16dp"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        app:srcCompat="@drawable/instagram"
                        android:fontFamily="@font/comfortaa_bold"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/instagram"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#000" />
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.85"
                            android:text="@string/instagramdes" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/rate"
                    android:fontFamily="@font/comfortaa_bold"
                    android:textColor="#000"
                    android:textSize="17sp"
                    tools:ignore="MissingPrefix" />
                <LinearLayout
                    android:onClick="app_rate"
                    android:id="@+id/app_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="16dp"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:srcCompat="@drawable/star"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#000" />
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.85"
                            android:text="@string/ratedes" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:onClick="app_share"
                    android:id="@+id/app_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="16dp"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:srcCompat="@drawable/share"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/share"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#000" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa_bold"
                    android:padding="12dp"
                    android:text="@string/support_development"
                    android:textColor="#000"
                    android:textSize="17sp"
                    tools:ignore="MissingPrefix" />
                <LinearLayout
                    android:onClick="app_donate"
                    android:id="@+id/app_donate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="16dp"
                    android:orientation="horizontal"
                    tools:ignore="PrivateResource">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:srcCompat="@drawable/donate"
                        app:tint="#000"
                        tools:ignore="VectorDrawableCompat" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp">
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support_development"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="#000" />
                        <android.support.v7.widget.AppCompatTextView
                            android:fontFamily="@font/comfortaa_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:alpha="0.85"
                            android:text="@string/support_development_summary" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>